# Schulbuchausleihe

./: Procfile  db.sqlite3  manage.py  pyproject.toml  readme.md  requirements.txt  run.command  todo.py
Buecherei_SRH_Django/: asgi.py  settings.py  urls.py  wsgi.py
buecherei/: admin.py  apps.py  forms.py  isbn_lookup.py  models.py  views.py
buecherei/migrations/: 0001_initial.py  0002_alter_ausleihe_options_alter_autor_options_and_more.py  0003_alter_ausleihe_ausleihdatum.py  0004_alter_ausleihe_rueckgabedatum.py  0005_alter_buch_verlag.py  0006_alter_ausleihe_rueckgabedatum.py  0007_remove_buch_autorid_autor_buch.py  0008_alter_autor_buch.py  0009_remove_autor_buch_buch_autor.py  0010_rename_autor_buch_autorid.py  0011_remove_buch_autorid_buch_autor.py
buecherei/static/css/: style.css
buecherei/static/img/: icon-source_and_license.txt
templates/: add.html  ausleih.html  base.html  buch.html  buch.html_BAK  detail_view.html  edit.html  index.html  nutzer.html  search.html
